@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2015 See AUTHORS file
+ * Copyright (c) 2017 See AUTHORS file
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
@@ -9,58 +9,42 @@
  * Neither the name of the mini2Dx nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package org.mini2Dx.core;
+package org.mini2Dx.core.util;
 
-import org.mini2Dx.core.controller.ControllerMapping;
-import org.mini2Dx.core.di.DependencyInjection;
-import org.mini2Dx.core.playerdata.PlayerData;
-import org.mini2Dx.core.serialization.JsonSerializer;
-import org.mini2Dx.core.serialization.XmlSerializer;
-import org.mini2Dx.core.util.PerformanceTracker;
-import org.mini2Dx.natives.Os;
-import org.mini2Dx.natives.OsInformation;
+import java.util.LinkedList;
+import java.util.Queue;
 
 /**
- * Mini2Dx utility classes
+ * Utility class for tracking a rolling average
  */
-public class Mdx {
-	/**
-	 * Provides access to controller mappings
-	 */
-	public static ControllerMapping controllers = new ControllerMapping();
-	
-	/**
-	 * Interface for reading/writing player data, e.g. save games, preferences
-	 */
-	public static PlayerData playerData;
-	
-	/**
-	 * Dependency injection
-	 */
-	public static DependencyInjection di;
-	
-	/**
-	 * Returns the current operating system. See <a href="https://github.com/mini2Dx/natives-loader">natives-loader project</a> for more javadocs
-	 */
-	public static Os os = OsInformation.getOs();
-	
-	/**
-	 * Tracks updates + frames per second
-	 */
-	public static PerformanceTracker performanceTracker = new PerformanceTracker();
-	
-	/**
-	 * JSON serialization
-	 */
-	public static JsonSerializer json = new JsonSerializer();
-	
-	/**
-	 * XML serialization
-	 */
-	public static XmlSerializer xml;
-	
-	/**
-	 * This game's unique identifier for app stores
-	 */
-	public static String gameIdentifier;
+public class RollingAverage {
+	private final Queue<Long> queue = new LinkedList<Long>();
+	private int size;
+	private double average;
+
+	public RollingAverage(int size) {
+		super();
+		this.size = size;
+	}
+
+	public void mark(long value) {
+		if (queue.size() < size) {
+			queue.offer(value);
+			long sum = 0;
+			for (long i : queue) {
+				sum += i;
+			}
+			average = (double) sum / queue.size();
+		} else {
+			long head = queue.poll();
+			double minus = (double) head / size;
+			queue.offer(value);
+			double add = (double) value / size;
+			average = average + add - minus;
+		}
+	}
+
+	public double getAverage() {
+		return average;
+	}
 }
