@@ -1,10 +1,15 @@
 [1.5.0-SNAPSHOT]
+WARNING: This release changes the default target timestep from 100FPS to 60FPS. 
+To change it back set config.targetTimestep to 0.1f
+
 - Updated to libGDX 1.9.6, roboVM 2.3.0 and artemis-odb 2.1.0
 - (#68) Added Checkbox, Slider and RadioButton UI elements
 - Added Graphics#isWindowReady()
 - Added UiContainerOperation and ClearShaderProgramOperation for render pipelines
 - Added ScrollBox#setMinHeight to override the style's minimum height
 - Added UiElement#defer to defer method calls until the next frame
+- Added PerformanceTracker for debugging performance issues
+- Changed default target timestep to 60FPS
 - ActionListeners now receive event details via ActionEvent instance
 - Fixed Button instances not triggering right-click events
 - Fixed ScrollBox#setMaxHeight triggering unnecessary layouts
